tests/ui/transmutability/visibility/assume/should_accept_if_dst_has_unreachable_ty.stderr
error[E0603]: struct `Dst` is private
  --> $DIR/should_accept_if_dst_has_unreachable_ty.rs:39:46
   |
LL |     assert::is_transmutable::<src::Src, dst::Dst, Context>();
   |                                              ^^^ private struct
   |
note: the struct `Dst` is defined here
  --> $DIR/should_accept_if_dst_has_unreachable_ty.rs:32:16
   |
LL |     #[repr(C)] pub(self) struct Dst {
   |                ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
